# Minerva

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README
cmake/: GenerateMSL.cmake  MSLGeneration.cmake
include/Factories/: VideoFactory.h
include/Kernel/: VideoSource.h  World.h
include/Kernel/Parsers/: MSLParser.h  MSLProperties.h  Parser.h
include/Kernel/Resources/: Resource.h
include/Kernel/TrackingMethods/: TrackingMethodARTK.h
include/MAO/: MAO.h  MAOMarksGroup.h  MAOPositionator3D.h  MAOValue.h
include/MLB/: MLB.h
include/MPY/: MGEModule.h  WrapperTypes.h
ports/sdl1-image/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/sdl1-ttf/: CMakeLists.txt  portfile.cmake  vcpkg.json
source/: minerva.cpp  minerva_smoke.cpp  player.cpp
source/Factories/: VideoFactory.cpp
source/Kernel/: VideoSource.cpp  World.cpp
source/Kernel/Parsers/: MSLParser.cpp  MSLParser.y  MSLScanner.cpp  MSLScanner.l  Parser3ds.cpp
source/Kernel/Resources/: ResourcesManager.cpp
source/Kernel/TrackingMethods/: TrackingMethodARTK.cpp
source/MLB/Controller/: MLBControllerScript.cpp
source/MPY/: MPYWrapper.cpp
tests/: minerva_kernel_tests.cpp
tests/Controllers/: GameLogicControllerTests.cpp  InputEventControllerTests.cpp  PhysicsControllerTests.cpp
tests/Factories/: MAOFactoryTests.cpp  MLBFactoryTests.cpp  TrackingMethodFactoryTests.cpp  VideoFactoryTests.cpp
tests/Kernel/: EndControllerTests.cpp  GLDebugDrawerTests.cpp  LoggerTests.cpp  PathPointTests.cpp  PhysicObjectTests.cpp  VideoSourceTests.cpp  WorldTests.cpp
tests/Kernel/Parsers/: MSLParserTests.cpp  MSLPreprocessorTests.cpp  Parser3dsTests.cpp  ParserTests.cpp
tests/Kernel/Resources/: ResourceFileTests.cpp  ResourceTests.cpp  ResourceZipTests.cpp  ResourcesManagerTests.cpp
tests/Kernel/TrackingMethods/: TrackingMethodARTKTests.cpp  TrackingMethodTests.cpp
tests/MAO/: MAOMarkTests.cpp  MAOMarksGroupTests.cpp  MAOPositionator3DTests.cpp  MAOPropertyTests.cpp  MAORenderable2DTests.cpp  MAORenderable2DTextTests.cpp  MAORenderable3DTests.cpp  MAOTests.cpp  MAOValueTests.cpp
tests/MLB/: MLBTests.cpp
tests/MLB/Actuator/: MLBActuator3DTests.cpp  MLBActuatorAddDynamicObjectTests.cpp  MLBActuatorSoundTests.cpp  MLBActuatorTests.cpp  MLBActuatorVisibilityTests.cpp
tests/MLB/Controller/: MLBControllerTests.cpp
tests/MLB/Sensor/: MLBSensorKeyboardTests.cpp  MLBSensorSpatialTests.cpp  MLBSensorTests.cpp
tests/MPY/: PythonIntegrationTests.cpp  WrapperTypesTests.cpp
tests/cmake/: VerifyMinervaUsage.cmake
